--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
