--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.300.0",
     "next": "14.0.4",
     "next-themes": "^0.4.4",
+    "next-view-transitions": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
