--- a/.prettierrc
+++ b/.prettierrc
@@ -25,11 +25,7 @@
     "importOrderSeparation": true,
     "importOrderSortSpecifiers": true,
     "importOrderBuiltinModulesToTop": true,
-    "importOrderParserPlugins": [
-        "typescript",
-        "jsx",
-        "decorators-legacy"
-    ],
+    "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
     "importOrderMergeDuplicateImports": true,
     "importOrderCombineTypeAndValueImports": true,
     "plugins": [
